# Synthara

./: .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/api/app/routers/: __init__.py  economy.py  entitlements.py  events.py  game_preview.py  models.py  rewards.py
apps/api/scripts/: dev.sh  test.sh
apps/api/tests/: test_health.py  test_seed_guard.py
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  about.tsx  dev-analytics.tsx  gold-shop.tsx  nft-inventory.tsx
apps/mobile/app/(tabs)/: _layout.tsx  game.tsx  home.tsx  profile.tsx  settings.tsx
apps/mobile/app/profile/: model.tsx  register-model.tsx
apps/mobile/src/api/: client.ts  events.ts  hooks.ts
apps/mobile/src/components/: GoldWalletCard.tsx  ModelCard.tsx
apps/mobile/src/config/: appEnv.ts
apps/mobile/src/data/: demoModels.ts  demoUserAssets.ts  homeFeed.ts
apps/mobile/src/domain/: rewardEngine.ts
apps/mobile/src/hooks/: useDemoIdentity.ts
apps/mobile/src/providers/: AppProviders.tsx
apps/mobile/src/state/: auth.ts  demoIdentity.ts  entitlements.ts  eventLog.ts  gold.ts  localInventory.ts  modelRegistry.ts
apps/mobile/src/ui/: Badge.tsx  Button.tsx  Card.tsx  Divider.tsx  EmptyState.tsx  LoadingState.tsx  Screen.tsx  SectionHeader.tsx  ThemeProvider.tsx  index.ts  (+1 more)
docs/: SSOT-v1-Core-Economy.odt  SSOT-v2-Road-to-Final-Phase.odt  SSOT_COMPLIANCE.md
(+20 files in other folders)
