[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthara-api"
version = "0.1.0"
description = "Synthara 3.0 FastAPI service"
authors = [{name = "Synthara", email = "dev@synthara.ai"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.21",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.5",
  "black>=24.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
